# Sab_Recipe

./: pyproject.toml
auth/: forms.py  urls.py  views.py
blogs/: forms.py  models.py
blogs/migrations/: 0001_initial.py
recipe/: settings.py  urls.py
recipes/: admin.py  forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes_user/: admin.py  apps.py
recipes_user/migrations/: 0001_initial.py
templates/: base.html  generic_forms.html  index.html  login.html  signup.html
