[tool.poetry]
name = "sabe_recipe"
version = "0.1.0"
description = "This poroject is for a website for my wife, in which she would like to display her bestt recipes for everyone to enjoy."
authors = ["Mustafa Prodhan <mustafa.prodhan.317@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
